better storage of static geojson

--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -14,7 +14,7 @@ head
 body
   div#topbar
     div.instructions
-      strong.instructions Drop GeoJSON, KML, and GPX files with times onto this page.
+      strong.instructions Drop GeoJSON, KML, and GPX files with times onto this page.&nbsp;
       a(href="/geos/ToEneko.kml") Download one
     div.output
       span#readtime.output
