--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -9,7 +9,7 @@ head
   script(type="text/javascript", src="scripts/leaflet.js")
   script(type="text/javascript", src="scripts/jquery-1.7.1.min.js")
   script(type="text/javascript", src="scripts/jquery-ui-slider.min.js")
-  script(type="text/javascript") var myjson = '#{json}';
+  script(type="text/javascript") var myjson = '!{json}';
   script(type="text/javascript", src="scripts/displaymap.js")
 body
   div#topbar
