--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -1,16 +1,16 @@
 head
   meta(name="viewport", content="initial-scale=1.0, user-scalable=no")
   title Crunchiertime
-  link(rel="stylesheet", href="stylesheets/leaflet.css", type="text/css")
+  link(rel="stylesheet", href="/stylesheets/leaflet.css", type="text/css")
   // [if lte IE 8]
-    link(rel="stylesheet", href="stylesheets/leaflet.ie.css", type="text/css")
-  link(href='stylesheets/jquery-ui-slider.css', rel='stylesheet', type='text/css')
-  link(href='stylesheets/displaymap.css', rel='stylesheet', type='text/css')
-  script(type="text/javascript", src="scripts/leaflet.js")
-  script(type="text/javascript", src="scripts/jquery-1.7.1.min.js")
-  script(type="text/javascript", src="scripts/jquery-ui-slider.min.js")
+    link(rel="stylesheet", href="/stylesheets/leaflet.ie.css", type="text/css")
+  link(href='/stylesheets/jquery-ui-slider.css', rel='stylesheet', type='text/css')
+  link(href='/stylesheets/displaymap.css', rel='stylesheet', type='text/css')
+  script(type="text/javascript", src="/scripts/leaflet.js")
+  script(type="text/javascript", src="/scripts/jquery-1.7.1.min.js")
+  script(type="text/javascript", src="/scripts/jquery-ui-slider.min.js")
   script(type="text/javascript") var myjson = '!{json}';
-  script(type="text/javascript", src="scripts/displaymap.js")
+  script(type="text/javascript", src="/scripts/displaymap.js")
 body
   div#topbar
     div.instructions
