--- a/stylesheets/displaymap.css
+++ b/stylesheets/displaymap.css
@@ -10,10 +10,10 @@ body {
   background-color: #f0f0f0;
 }
 #map {
-  height:85%;
+  height:80%;
   overflow:none;
   position:absolute;
-  top:14%;
+  top:19%;
   bottom:0;
   width:100%;
   left:0;
@@ -39,7 +39,7 @@ ul li{
 #topbar{
   padding-bottom: 20px;
   width: 100%;
-  height: 15%;
+  height: 20%;
   overflow: none;
 }
 #slidebar {
@@ -66,4 +66,8 @@ ul li{
 }
 .output{
   display: none;
+}
+#controls i {
+  vertical-align: middle;
+  margin-top: -2px;
 }
