change title to crunchtime

--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -1,6 +1,6 @@
 head
   meta(name="viewport", content="initial-scale=1.0, user-scalable=no")
-  title Crunchiertime
+  title Crunchtime
   link(rel="stylesheet", href="/bootstrap/css/bootstrap.min.css", type="text/css")
   link(rel="stylesheet", href="/stylesheets/leaflet.css", type="text/css")
   // [if lte IE 8]
