--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -15,7 +15,7 @@ head
 body
   div#topbar
     div.instructions
-      strong.instructions Drop GeoJSON, KML, and GPX files with times onto this page.&nbsp;
+      strong.instructions Drop GeoJSON, KML, GPX, and CSV files with times onto this page.&nbsp;
       a(href="/geos/ToEneko.kml") Download one
     div.output
       span#readtime.output
