--- a/stylesheets/displaymap.css
+++ b/stylesheets/displaymap.css
@@ -67,7 +67,10 @@ ul li{
 .output{
   display: none;
 }
-#controls i {
+#controls i{
   vertical-align: middle;
   margin-top: -2px;
+}
+.mobile{
+  display: none;
 }
