read public gpx traces

--- a/views/login.jade
+++ b/views/login.jade
@@ -1,2 +1,2 @@
 
-a(href="/auth/openstreetmap") Login with OpenStreetMap
+a(href="http://www.cruncht.im/auth/openstreetmap") Login with OpenStreetMap
