attempt to detect and jump over gaps in timeline

--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -24,6 +24,7 @@ body
     div.output
       span#readtime
       a#edittime.btn.btn-info Edit
+      img.clock(src="/clock.gif")
     div#slidebar
     div#controls.output
       a.btn.btn-success(href="#")
