prettier login page

--- a/views/login.jade
+++ b/views/login.jade
@@ -7,10 +7,13 @@ body
   div.container
     .row
       .span10.offset1
-        .hero-unit
-          h3 Map Your GPS Traces
+        .hero-unit(style="background-color:#fff;")
+          h2 Map Your GPS Traces
           hr
           p Import your OpenStreetMap traces into a continuous timeline
           a.btn.btn-primary(href="http://www.cruncht.im/auth/openstreetmap") Login with OpenStreetMap
           br
+          br
           em Traces' privacy must be set to 'identifiable' for them to appear on the map
+          br
+          img(src="/traceexample.png")
