add link on homepage to osm import

--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -18,6 +18,8 @@ body
       div.desktop
         strong Drop GeoJSON, KML, GPX, and CSV files with times onto this page.&nbsp;
         a(href="/geos/ToEneko.kml") Download one
+        span &nbsp;|&nbsp;
+        a(href="/login") Your OpenStreetMap Traces
       div.mobile
         strong Upload GeoJSON, KML, GPX, and CSV files with times.
         input(name="mygpx", type="file")
