--- a/public/stylesheets/displaymap.css
+++ b/public/stylesheets/displaymap.css
@@ -82,3 +82,8 @@ ul li{
   height: 28px;
   margin-left: 10px;
 }
+.sidetab{
+  border-left: none;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
