--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -57,15 +57,10 @@ body
       button.close(type="button", data-dismiss="modal", aria-hidden="true") &times
       h3 Edit Map
     div.modal-body
-      strong Smooth Lines
-      a.btn.btn-info(href="#", onclick="simplifyLines(0.0003)") Simplify (Most)
-      a.btn.btn-info(href="#", onclick="simplifyLines(0.0001)") Simplify (Average)
-      a.btn.btn-info(href="#", onclick="simplifyLines(0.00001)") Simplify (Least)
-      br
-      br
-      strong Trim
-      br
+      h3 Trim
       div#trimslider
+      br
+      br
       ul
         li
           span Start at&nbsp;
@@ -75,3 +70,13 @@ body
           span#trimend
       br
       a#trimnow.btn.btn-primary.pull-right(href="#") Trim Now
+
+      h3 Smooth Lines
+      div#smoothslider
+      //
+        a.btn.btn-info(href="#", onclick="simplifyLines(0.0003)") Simplify (Most)
+        a.btn.btn-info(href="#", onclick="simplifyLines(0.0001)") Simplify (Average)
+        a.btn.btn-info(href="#", onclick="simplifyLines(0.00001)") Simplify (Least)
+      canvas#smoothpreview(width="500", height="200")
+      br
+      a#smoothnow.btn.btn-primary.pull-right(href="#") Smooth Now
