--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -58,9 +58,7 @@ body
       h3 Edit Map
     div.modal-body
       h3 Trim
-      div#trimslider
-      br
-      br
+      div.trimslider
       ul
         li
           span Start at&nbsp;
@@ -72,7 +70,7 @@ body
       a#trimnow.btn.btn-primary.pull-right(href="#") Trim Now
 
       h3 Smooth Lines
-      div#smoothslider
+      div.smoothslider
       //
         a.btn.btn-info(href="#", onclick="simplifyLines(0.0003)") Simplify (Most)
         a.btn.btn-info(href="#", onclick="simplifyLines(0.0001)") Simplify (Average)
