--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -58,7 +58,8 @@ body
       h3 Edit Map
     div.modal-body
       h3 Trim
-      div.trimslider
+      div#sliderhold
+        div#trimslider
       ul
         li
           span Start at&nbsp;
@@ -70,7 +71,8 @@ body
       a#trimnow.btn.btn-primary.pull-right(href="#") Trim Now
 
       h3 Smooth Lines
-      div.smoothslider
+      div#sliderhold2
+        div#smoothslider
       //
         a.btn.btn-info(href="#", onclick="simplifyLines(0.0003)") Simplify (Most)
         a.btn.btn-info(href="#", onclick="simplifyLines(0.0001)") Simplify (Average)
