--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -58,7 +58,7 @@ body
       h3 Edit Map
     div.modal-body
       h3 Trim
-      div#sliderhold
+      div.sliderhold
         div#trimslider
       ul
         li
@@ -71,7 +71,7 @@ body
       a#trimnow.btn.btn-primary.pull-right(href="#") Trim Now
 
       h3 Smooth Lines
-      div#sliderhold2
+      div.sliderhold
         div#smoothslider
       //
         a.btn.btn-info(href="#", onclick="simplifyLines(0.0003)") Simplify (Most)
