--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -58,8 +58,7 @@ body
       h3 Edit Map
     div.modal-body
       h3 Trim
-      div.sliderhold
-        div#trimslider
+      div#trimslider
       ul
         li
           span Start at&nbsp;
@@ -71,12 +70,10 @@ body
       a#trimnow.btn.btn-primary.pull-right(href="#") Trim Now
 
       h3 Smooth Lines
-      div.sliderhold
-        div#smoothslider
-      //
-        a.btn.btn-info(href="#", onclick="simplifyLines(0.0003)") Simplify (Most)
-        a.btn.btn-info(href="#", onclick="simplifyLines(0.0001)") Simplify (Average)
-        a.btn.btn-info(href="#", onclick="simplifyLines(0.00001)") Simplify (Least)
+      a.btn.btn-info(href="#", onclick="simplifyBy(0.00001)") Low
+      a.btn.btn-info(href="#", onclick="simplifyBy(0.00005)") Medium
+      a.btn.btn-info(href="#", onclick="simplifyBy(0.0001)") High
+      a.btn.btn-info(href="#", onclick="simplifyBy(0.0002)") Most
       canvas#smoothpreview(width="500", height="200")
       br
-      a#smoothnow.btn.btn-primary.pull-right(href="#") Smooth Now
+      a#smoothnow.btn.btn-primary.pull-right(href="#") Apply
